--- a/Contacts.css
+++ b/Contacts.css
@@ -1,34 +1,385 @@
-body {
-    background-color: #360130;
-    /* font-family: "Poppins"; */
+@font-face {
+  font-family: Rubik-Dirt;
+  src: url(./Fonts/Rubik-Dirt.ttf);
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/Fonts/Poppins-Regular.ttf);
+}
+ /* -👇👇👇_DARK_MODE_👇👇👇_Background_Color_Scheme_👇👇👇- */
+:root {
+/* -👇👇👇_LIGHT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
+    --main-bg-color-light: #f0f0f0;
+    --inp-bg-color-light: #ffffff; 
+    --border-color-light: #cccccc; 
+    --inp-txt-color-light: #333333; 
+    --title-color-light: #333333;
+    --btn-hover-color-light: #e0e0e0; 
+    --main-txt-color-light: #333333;
+    --btn-color-light: #007BFF;
+    --btn-bg-color-light: #e0e0e0;
+
+   /* -👇👇👇_DEFAULT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
+    --main-bg-color: var(--main-bg-color-light);   
+    --inp-bg-color: var(--inp-bg-color-light);
+    --border-color: var (--border-color-light);
+    --inp-txt-color: var(--inp-txt-color-light);
+    --title-color: var(--title-color-light);
+    --btn-hover-color:var(--btn-hover-color-light);
+    --main-txt-color: var(--main-txt-color-light);
+    --btn-color: var(--btn-color-light);
+    --btn-bg-color: var(--btn-bg-color-light);
+   /* -👇👇👇_DARK_MODE_👇👇👇_Color_Scheme_👇👇👇- */
+    --main-bg-color-dark: #360130;
+    --inp-bg-color-dark: #132531;
+    --border-color-dark: #7A297A;
+    --inp-txt-color-dark: #FFFFFF;
+    --title-color-dark: #FFD700;
+    --btn-hover-color-dark: #7A297A;
+    --main-txt-color-dark: white;
+    --btn-color-dark: #3f84b2;
+    --btn-bg-color-dark: #132531;
+    --font-family-title: 'Rubik-Dirt', sans-serif;
+    --font-family-body: 'Poppins', sans-serif;
 }
 
+body {
+  background-color: var(--main-bg-color);
+  margin: 0;
+}
+ /* -👇👇👇-header-👇👇👇-Start-👇👇👇- */
+
+ 
+.left-logo-mode{/* -👇👇👇-Mode-👇👇👇-Start-👇👇👇- */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+ .light-mode-text{
+  color: var(--input-text-light);
+  align-self: center;
+  text-align: center;
+  font-size: 18px;
+  font-family: var(--font-family-title);
+  color: var(--title-light);
+  width: 60px;
+  /* position: absolute;
+  left: 5px; */
+ }
+.mode-with-logo{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-self: center;
+  border: 1px solid var(--border-color);
+  border-radius: 50px;
+  background-color: var(--btn-background-light);
+  gap: 5px;
+  padding-right: 10px;
+  padding-left: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  width: 110px;
+  height: 48px;
+}
+.mode {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  padding: 2px;
+  margin-top: 2.5px;
+}
+.mode input[type="checkbox"] {
+  display: none;
+}
+.mode label{
+  background-image: url("./light-mode-icon60x60");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+
+.mode input[type="checkbox"]:checked + label {
+  background-color: var(--main-bg-color);
+  position: absolute;
+  bottom: 0px;
+  left: 75px;
+  right: 0px;
+  top: 2.5px;
+  background-image: url("./moon.gif");  /* need to be changed -----Canva--RunwayML*/
+}
+/* -☝☝☝-Mode-☝☝☝-end-☝☝☝- */
+/* ---👇👇👇-header-👇👇👇-Start-👇👇👇--- */
 header {
-    /* font-family: Poopins; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    /* font-family: "Poppins"; */
     padding: 32px 142px;
-    
   }
-
   .active {
-    color: #FFD700;
+    color: var(--title-color);
+    border: 1px solid var(--title-color);
+    text-decoration: none;
+    font-family: var(--font-family-title);
+    padding: 5px 10px;
+    border-radius: 10px 10px 10px 10px;
+    background-image: url("./active-nav-bg-cool-mode.gif");
+    border-left: 0.35px;
+    border-right: 0.35px
   }
-
   header ul {
     font-family: "Poppins";
-    color: white;
+    color: var(--inp-txt-color);
     list-style: none;
     display: flex;
     gap: 10px;
     font-size: 18px;
-      
-  }
+    font-family: var(--font-family-body);
+}
 .non-active{
-    color: white;
+  color: var(--inp-txt-color);
     text-decoration-line: none;
 
+  }/* -☝☝☝-Header-☝☝☝-end-☝☝☝- */
+ /* -👇👇👇-Main Content-👇👇👇-Start-👇👇👇- */
+.main-content {
+  width: 100%;
+  height: auto;
+  padding: 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.main-content-text-box {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  align-self: stretch;
+}
+.text-box-title {
+  color: var(--title-color);
+  text-align: center;
+  font-size: 64px;
+  align-self: stretch;
+  line-height: 84px;
+  font-family: var(--font-family-title);
+  margin-bottom: 0px;
+}
+.text-box-title span {
+  border: 1px solid var(--border-color);
+  text-align: center;
+  border-top: none;
+  padding: 10px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-left: 0.5px;
+  border-right: 0.5px;
   }
+.text-box-text {
+  color: var(--inp-txt-color);
+  text-align: center;
+  align-self: stretch;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-top: 0;
+  font-family: var(--font-family-body);
+}
+.text-box-text span {
+  opacity: 0.5;
+  margin-left: 5px;
+  font-size: 16PX;
+  text-align: center;
+  font-family: var(--font-family-title);
+}
+ /* -👇👇👇-Form-👇👇👇-Start-👇👇👇- */
+ .form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  width: 546px;
+  height: auto;
+  padding: 35px 24px;
+  gap: 24px;
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  margin: 0 auto;
+}
+.short-form {
+  width: auto;
+  height: 96px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+.form-label {
+  color: var(--inp-txt-color);
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+  margin-bottom: 0px;
+  margin-left: 10px;
+}
+.short-input-container {
+  width: 498px;
+  height: auto;
+  display: flex;
+  padding: 16px;
+  align-items: center;
+  gap: 12px; 
+  align-self: stretch;
+  border: 1px solid var(--border-color); 
+  border-radius: 10px;
+  background-color: var(--inp-bg-color);
+  margin-top: 0px;
+} 
+.short-input-container input {
+  width:100%;
+  height: 100%;
+  background-color: #b14ab11e;
+  border-radius: 5px;
+  color: var(--input-text-light); 
+  font-size: 18px; 
+  padding: 5px 10px;
+  border: 1px solid var(--border-color); 
+}
+.short-input-container input::placeholder {
+  color: var(--inp-txt-color); 
+  font-family: var(--font-family-body);
+  opacity: 0.7; 
+}
+.long-form {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+.long-input-container {
+  width: 498px;
+  height: auto;
+  display: block;
+  padding: 12px 16px;
+  align-self: stretch;
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  background-color: var(--btn-bg-color);
+  margin-top: 0px;
+  margin-right: 0px;
+} 
+.btn-container {
+  width: 522px;
+  height: auto;
+  padding: 3px 4px;
+  border: 0.25px solid var(--border-color);
+  border-radius: 10px;
+  background-color: var(--btn-bg-color);
+}
+.long-input-container textarea {
+  width: 100%;
+  height: 231px; 
+  padding: 10px 10px; 
+  background-color: var(--inp-bg-color); 
+  border: 1px solid var(--border-color); 
+  border-radius: 5px; 
+  color: var(--inp-txt-color); 
+  font-size: 18px; 
+  line-height: 1.5; 
+  box-sizing: border-box; 
+  resize: none; 
+}
+.long-input-container textarea::placeholder {
+  font-family: var(--font-family-body);
+  color: var(--inp-txt-color);  
+  opacity: 0.7; 
+}
+.send-msg-btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: var(--inp-txt-color);
+  background-color: var(--btn-color);
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+  text-align: center;
+  font-weight: 300;
+  cursor: pointer;
+  text-decoration: none;
+  width: 100%;
+  font-family: var(--font-family-title);
+}
+.send-msg-btn:hover {
+  background-color: var(--btn-hover-color);
+  color: var(--title-color);
+  height: 50px;
+}
+ /* -👇👇👇-Footer-👇👇👇-Start-👇👇👇- */
+.icons{
+  width: 35px;
+  height: 35px;
+}
+.icons:hover {
+  width: 50px;
+  height: 50px;
+  background-color: var(--btn-color);
+  border-radius: 10px;
+  padding: 3px;
+  border: 2px solid var(--border-color);
+}
+.footer {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin: 64px; 
+}
+.footer-txt{
+color: var(--title-color);
+font-size: 25px;
+opacity: 0.75;
+font-family: var(--font-family-title);
+}
+.footer-txt:hover {
+  cursor: pointer;
+  font-size: 35px;
+  font-weight: 900;
+  border: 3px dashed var(--title-color);
+  border-radius: 10px;
+  padding: 5px 10px;
+  background-color: var(--btn-hover-color);
+}
+.footer-icons {
+display: flex;
+flex-direction: row;
+align-items: center;
+gap: 20px;
+}/* -☝☝☝-Footer-☝☝☝-end-☝☝☝- */
+ /* -👇👇👇-Line-👇👇👇-Start-👇👇👇- */
+.line {
+  border: 0;
+  height: 1px;
+  background: var(--title-color); 
+  margin-top: 64px; 
+  margin-bottom: 64px;
+  width: 1157px; 
+}
+ /* -☝️☝️☝️-Line-☝️☝️☝️-End-☝️☝️☝️- */
