--- a/portfolio.css
+++ b/portfolio.css
@@ -1,34 +1,423 @@
-body {
-    background-color: #360130;
-    /* font-family: "Poppins"; */
+@font-face {
+  font-family: Rubik-Dirt;
+  src: url(./Fonts/Rubik-Dirt.ttf);
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/Fonts/Poppins-Regular.ttf);
+}
+ /* -👇👇👇_DARK_MODE_👇👇👇_Background_Color_Scheme_👇👇👇- */
+:root {
+/* -👇👇👇_LIGHT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
+    --main-bg-color-light: #f0f0f0;
+    --inp-bg-color-light: #ffffff; 
+    --border-color-light: #cccccc; 
+    --inp-txt-color-light: #333333; 
+    --title-color-light: #333333;
+    --btn-hover-color-light: #e0e0e0; 
+    --main-txt-color-light: #333333;
+    --btn-color-light: #007BFF;
+    --btn-bg-color-light: #e0e0e0;
+
+   /* -👇👇👇_DEFAULT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
+    --main-bg-color: var(--main-bg-color-light);   
+    --inp-bg-color: var(--inp-bg-color-light);
+    --border-color: var (--border-color-light);
+    --inp-txt-color: var(--inp-txt-color-light);
+    --title-color: var(--title-color-light);
+    --btn-hover-color:var(--btn-hover-color-light);
+    --main-txt-color: var(--main-txt-color-light);
+    --btn-color: var(--btn-color-light);
+    --btn-bg-color: var(--btn-bg-color-light);
+   /* -👇👇👇_DARK_MODE_👇👇👇_Color_Scheme_👇👇👇- */
+    --main-bg-color-dark: #360130;
+    --inp-bg-color-dark: #132531;
+    --border-color-dark: #7A297A;
+    --inp-txt-color-dark: #FFFFFF;
+    --title-color-dark: #FFD700;
+    --btn-hover-color-dark: #7A297A;
+    --main-txt-color-dark: white;
+    --btn-color-dark: #3f84b2;
+    --btn-bg-color-dark: #132531;
+    --font-family-title: 'Rubik-Dirt', sans-serif;
+    --font-family-body: 'Poppins', sans-serif;
 }
 
+/* body {
+  background-color: var(--main-bg-color);
+  margin: 0;
+} */
+ /* -👇👇👇-header-👇👇👇-Start-👇👇👇- */
+
+ 
+.left-logo-mode{/* -👇👇👇-Mode-👇👇👇-Start-👇👇👇- */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+ .light-mode-text{
+  color: var(--input-text-light);
+  align-self: center;
+  text-align: center;
+  font-size: 18px;
+  font-family: var(--font-family-title);
+  color: var(--title-light);
+  width: 60px;
+  /* position: absolute;
+  left: 5px; */
+ }
+.mode-with-logo{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-self: center;
+  border: 1px solid var(--border-color);
+  border-radius: 50px;
+  background-color: var(--btn-background-light);
+  gap: 5px;
+  padding-right: 10px;
+  padding-left: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  width: 110px;
+  height: 48px;
+}
+.mode {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  padding: 2px;
+  margin-top: 2.5px;
+}
+.mode input[type="checkbox"] {
+  display: none;
+}
+.mode label{
+  background-image: url("./light-mode-icon60x60");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+
+.mode input[type="checkbox"]:checked + label {
+  background-color: var(--main-bg-color);
+  position: absolute;
+  bottom: 0px;
+  left: 75px;
+  right: 0px;
+  top: 2.5px;
+  background-image: url("./moon.gif");  /* need to be changed -----Canva--RunwayML*/
+}
+/* -☝☝☝-Mode-☝☝☝-end-☝☝☝- */
+/* ---👇👇👇-header-👇👇👇-Start-👇👇👇--- */
 header {
-    /* font-family: Poopins; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    /* font-family: "Poppins"; */
     padding: 32px 142px;
-    
   }
-
   .active {
-    color: #FFD700;
+    color: var(--title-color);
+    border: 1px solid var(--title-color);
+    text-decoration: none;
+    font-family: var(--font-family-title);
+    padding: 5px 10px;
+    border-radius: 10px 10px 10px 10px;
+    background-image: url("./active-nav-bg-cool-mode.gif");
+    border-left: 0.35px;
+    border-right: 0.35px
   }
-
   header ul {
     font-family: "Poppins";
-    color: white;
+    color: var(--inp-txt-color);
     list-style: none;
     display: flex;
     gap: 10px;
     font-size: 18px;
-      
-  }
+    font-family: var(--font-family-body);
+}
 .non-active{
-    color: white;
+  color: var(--inp-txt-color);
     text-decoration-line: none;
 
+  }/* -☝☝☝-Header-☝☝☝-end-☝☝☝- */
+
+
+/* ---------------The Line------------------------------- */
+
+.line {
+  border: 0;
+  height: 1px;
+  background: #000000; 
+  margin-top: 96px; 
+  margin-bottom: 96px;
+  width: 1157px; 
+}
+
+/* ---------------Main COntent------------------------------- */
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  align-content: center;
+  /* width: 1157px; */
+  align-items: center;
   }
+.content-title{
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 84px;
+  color: white;
+  text-align: center;
+  margin-bottom: 64px;
+}
+
+/* ---------------The Grid------------------------------- */
+
+.works-wrapper {
+  display: grid;
+  width: 1157px;
+  height: 456px;
+  grid-template-columns: repeat(3,1fr);
+  grid-auto-rows: 216px;
+  row-gap: 50px;
+  column-gap: 40px;
+  }
+
+.box-1{
+  width: 384px;
+  height: 216px;
+  border: 4px solid #ff9500;
+  border-radius: 15px;
+  background-image: url("./A.png");
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  }
+
+  .box-1 {
+
+    
+    
+    /* background-color: #f0f0f0; */
+    
+  }
+
+.box-1:hover{
+  background-image: url("./hover-img.gif");
+}
+
+.hover-links {
+  display: none; /* Initially hide the list */
+  position: absolute;
+  top: 50%; /* Position the list below the container */
+  left: 0;
+  /* background-color: white;
+  border: 1px solid #ccc; */
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.box-1:hover .hover-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+  height: 65px;
+}
+
+.box-2{
+  width: 384px;
+  height: 216px;
+  border: 4px solid #ff9500;
+  border-radius: 15px;
+  background-image: url("./B.png");
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  }
+
+.box-2:hover{
+  background-image: url("./hover-img.gif");
+}
+
+.box-2:hover .hover-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+  height: 65px;
+}
+
+.box-3{
+  width: 384px;
+  height: 216px;
+  border: 4px solid #ff9500;
+  border-radius: 15px;
+  background-image: url("./C.png");
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  }
+
+.box-3:hover{
+  background-image: url("./hover-img.gif");
+}
+
+.box-3:hover .hover-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+  height: 65px;
+}
+
+.box-4{
+  width: 384px;
+  height: 216px;
+  border: 4px solid #ff9500;
+  border-radius: 15px;
+  background-image: url("./D.png");
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  }
+
+.box-4:hover{
+  background-image: url("./hover-img.gif");
+}
+
+.box-4:hover .hover-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+  height: 65px;
+}
+
+.box-5{
+  width: 384px;
+  height: 216px;
+  border: 4px solid #ff9500;
+  border-radius: 15px;
+  background-image: url("./E.png");
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  }
+
+.box-5:hover{
+  background-image: url("./hover-img.gif");
+}
+
+.box-5:hover .hover-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+  height: 65px;
+}
+
+.box-6{
+  width: 384px;
+  height: 216px;
+  border: 4px solid #ff9500;
+  border-radius: 15px;
+  background-image: url("./F.png");
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  }
+
+.box-6:hover{
+  background-image: url("./hover-img.gif");
+}
+
+.box-6:hover .hover-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+  height: 65px;
+}
+
+/* ------------------work-links------------------------ */
+
+
+
+
+
+
+
+
+
+
+.hover-links li {
+  padding: 8px;
+  /* border-bottom: 1px solid #ddd; */
+}
+
+.hover-links li:last-child {
+  border-bottom: none;
+}
+
+.hover-links li:hover {
+  /* background-color: #f0f0f0; */
+}
+
+
+ /* -👇👇👇-Footer-👇👇👇-Start-👇👇👇- */
+ .icons{
+  width: 35px;
+  height: 35px;
+}
+.icons:hover {
+  width: 50px;
+  height: 50px;
+  background-color: var(--btn-color);
+  border-radius: 10px;
+  padding: 3px;
+  border: 2px solid var(--border-color);
+}
+.footer {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+margin: 64px; 
+}
+.footer-txt{
+color: var(--title-color);
+font-size: 25px;
+opacity: 0.75;
+font-family: var(--font-family-title);
+}
+.footer-txt:hover {
+  cursor: pointer;
+  font-size: 35px;
+  font-weight: 900;
+  border: 3px dashed var(--title-color);
+  border-radius: 10px;
+  padding: 5px 10px;
+  background-color: var(--btn-hover-color);
+}
+.footer-icons {
+display: flex;
+flex-direction: row;
+align-items: center;
+gap: 20px;
+}/* -☝☝☝-Footer-☝☝☝-end-☝☝☝- */
+
+
