--- a/About.css
+++ b/About.css
@@ -1,234 +1,45 @@
-@font-face {
-  font-family: Rubik-Dirt;
-  src: url(./Fonts/Rubik-Dirt.ttf);
-}
-@font-face {
-  font-family: Poppins;
-  src: url(/Fonts/Poppins-Regular.ttf);
-}
-:root {
-  /* -👇👇👇_LIGHT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
-  --bodyColor-light: #f0f0f0;
-  --titleColor-light:#1f1f1f;
-  --subtitleColor-light: #4b4b4b;
-  --textColor-light: #1f1f1f;
-  --lineColor-light: #007BFF;
-  --borderColor-light: #007BFF;
-  --buttonBackgroundColor-light:#007BFF;
-  --buttonBackgroundHover-light:  #f0f0f0;
-  --buttonTextColor-light: #f0f0f0;
-  --buttonTextHover-light: #1f1f1f;
-  --footerIconsBackgroundHoverCover-light: #007BFF;
-  --footerIconsBorderColor-light: #1f1f1f;
-  --footerTextbackgroundHoverColor-light: #007BFF;
-  --footerTextBorderHovercolor-light: #1f1f1f;
-  --footertitleColor-light: #1f1f1f;
-  --footertitleHoverColor-light: #fffcfc;
-  --headerNavLinkACTIVEBorderColor-light: #007BFF;
-  --headerNavLinkACTIVEColor-light: #1f1f1f;
-  --headerNavLinkNONACTIVEColor-light: #1f1f1f;
-  --textModeColor-light: #1f1f1f;
-     /* -👇👇👇_DEFAULT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
-  --bodyColor: var(--bodyColor-light);
-  --titleColor: var(--titleColor-light);
-  --subtitleColor: var(--subtitleColor-light);
-  --textColor: var(--textColor-light);
-  --lineColor: var(--lineColor-light);
-  --borderColor: var(--border-color-light);
-  --buttonBackgroundColor: var(--buttonBackgroundColor-light);
-  --buttonBackgroundHover: var( --buttonBackgroundHover-light);
-  --buttonTextColor: var(--buttonTextColor-light);
-  --buttonTextHover: var(--buttonTextHover-light);
-  --footerIconsBackgroundHoverCover: var(--footerIconsBackgroundHoverCover-light);
-  --footerIconsBorderColor: var(--footerIconsBorderColor-light);
-  --footerTextBackgroundHoverColor: var(--footerTextbackgroundHoverColor-light);
-  --footerTextBorderHovercolor: var(--footerTextBorderHovercolor-light);
-  --footertitleColor: var( --footertitleColor-light);
-  --footertitleHoverColor: var(--footertitleHoverColor-light);
-  --headerNavLinkACTIVEBorderColor: var(--headerNavLinkACTIVEBorderColor-light);
-  --headerNavLinkACTIVEColor: var(--headerNavLinkACTIVEColor-light);
-  --headerNavLinkColor: var(--headerNavLinkColor-light);
-  --headerNavLinkNONACTIVEColor: var(--headerNavLinkNONACTIVEColor-light);
-  --textModeColor: var(--textModeColor-light);
-    /* -👇👇👇_COOL_MODE_👇👇👇_Background_Color_Scheme_👇👇👇- */
-  --bodyColor-dark: #360130;
-  --titleColor-dark:#ffaa00;
-  --subtitleColor-dark: #0c71b4;
-  --textColor-dark: #f0f0f0;
-  --lineColor-dark: #a800a8;
-  --borderColor-dark: #ff00ff;
-  --buttonBackgroundColor-dark:#132531;
-  --buttonBackgroundHover-dark:  #7A297A;;
-  --buttonTextColor-dark: #f0f0f0;
-  --buttonTextHover-dark: #1f1f1f;
-  --footerIconsBackgroundHoverCover-dark: none;
-  --footerIconsBorderColor-dark: none;
-  --footerTextbackgroundHoverColor-dark: #ffd500;
-  --footerTextBorderHovercolor-dark: #007BFF;
-  --footertitleColor-dark: #fffcfc;
-  --footertitleHoverColor-dark: #1f1f1f;
-  --headerNavLinkACTIVEBorderColor-dark: #007BFF;
-  --headerNavLinkACTIVEColor-dark: #ff9500;
-  --headerNavLinkNONACTIVEColor-dark: #f0f0f0;
-  --textModeColor-dark: #ffd500;
-  --font-family-title: 'Rubik-Dirt', sans-serif;
-  --font-family-body: 'Poppins', sans-serif;
-  --navActiceTabBackground: var(--navActiceTabBackground-light);
-  --navActiceTabBackground-light: none;
-  --navActiceTabBackground-dark: url("./icons/active-nav-bg-cool-mode.gif");
-  --headerModeFlexDIrection: var(--headerModeFlexDIrection-light);
-  --headerModeFlexDIrection-light: flex;
-  --headerModeFlexDIrection-dark: row-reverse;
-  --bodyBackgroundImage-light: none;
-  --bodyBackgroundImage: var(--bodyBackgroundImage-light);
-  --bodyBackgroundImage-dark: url("./images/Backgrounds/body-5.gif");
-}
-body {
-  background-image: var(--bodyBackgroundImage);
-  background-color: var(--bodyColor);
-  margin: 0;
-}
-/* -👇👇👇-header-👇👇👇-Start-👇👇👇- */
-.left-logo-mode{/* -👇👇👇-Mode-👇👇👇-Start-👇👇👇- */
+/* -👇👇👇-Main Content-👇👇👇-Start-👇👇👇- */
+.about {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  gap: 20px;
+  justify-content: center;
+  margin-top: 64px;
 }
- .light-mode-text{
-  color: var(--textModeColor) !important;
-  align-self: center;
+.about img {
+  width: 250px;
+  height: 250px;
+  margin-bottom: 64px;
+}
+.about-title {
+  font-size: 96px;
+  align-self: stretch;
   text-align: center;
-  font-size: 18px;
+  font-weight: 200;
+  line-height: 84px;
+  color: var(--titleColor);
   font-family: var(--font-family-title);
-  color: var(--title-light);
-  width: 60px;
- }
-.mode-with-logo{
-  display: flex;
-  flex-direction: var(--headerModeFlexDIrection);
-  justify-content: space-between;
-  align-items: center;
-  align-self: center;
-  border: 1px solid var(--border-color);
-  border-radius: 50px;
-  background-color: var(--btn-background-light);
-  gap: 5px;
-  padding-right: 10px;
-  padding-left: 3px;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  width: 110px;
-  height: 48px;
-  position: relative;
+  margin-top: 0px;
 }
-.mode {
-  position: relative;
-  width: 45px;
-  height: 45px;
-  padding: 2px;
-  margin-top: 2.5px;
+.about-text {
+  align-self: stretch;
+  text-align: center;
+  color: var(--textColor);
+  font-family: var(--font-family-body);
+  line-height: 28px;
+  font-size: 18px;
+  padding: 0 32px;
+  width: 1157px;
+  margin: 0 auto;
 }
-.mode input[type="checkbox"] {
-  display: none;
-}
-.mode label{
-  background-image: url("./icons/cool-mode-icon.gif");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50px;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  display: inline-block;
-}
-.mode input[type="checkbox"]:checked + label {
-  /* background-color: var();-----------------☝☝☝-Mode-👇👇👇--- */
-  position: absolute;
-  bottom: 0px;
-  left: 5px;
-  right: 0px;
-  top: 2.5px;
-  background-image: url("./icons/light-mode-icon");  /* need to be changed -----Canva--RunwayML*/
-}
-/* -☝☝☝-Mode-☝☝☝-end-☝☝☝- */
-/* ---👇👇👇-header-👇👇👇-Start-👇👇👇--- */
-
-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 32px 142px;
-}
-  .active {
-    color: var(--headerNavLinkACTIVEColor);
-    border: 1px solid var(--headerNavLinkACTIVEBorderColor);
-    text-decoration: none;
-    font-family: var(--font-family-title);
-    padding: 5px 10px;
-    border-radius: 10px 10px 10px 10px;
-    background-image: var(--navActiceTabBackground);
-    /* background-image: url("./active-nav-bg-cool-mode.gif"); */
-    border-left: 0.35px;
-    border-right: 0.35px
-}
-  header ul {
-    font-family: "Poppins";
-    list-style: none;
-    display: flex;
-    gap: 10px;
-    font-size: 18px;
-    font-family: var(--font-family-body);
-}
-.non-active{
-  color: var(--headerNavLinkNONACTIVEColor);
-    text-decoration-line: none;
-
-  }/* -☝☝☝-Header-☝☝☝-end-☝☝☝- */
-.about{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 64px;
-  }
-.about img{
-    width: 250px;
-    height: 250px;
-    margin-bottom: 64px;
-  }
-.about-title{
-    font-size: 96px;
-    align-self: stretch;
-    text-align: center;
-    font-weight: 200;
-    line-height: 84px;
-    color: var(--titleColor);
-    font-family: var(--font-family-title);
-    margin-top: 0px;
-  }
-.about-text{
-    align-self: stretch;
-    text-align: center;
-    color: var(--textColor);
-    font-family: var(--font-family-body);
-    line-height: 28px;
-    font-size: 18px;
-    padding: 0 32px;
-    width: 1157px;
-    margin: 0 auto;
- }
 /* ---👇👇👇-Button-👇👇👇-Start-👇👇👇--- */
-.btns-container {
+.btnss-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 10px;
   width: 100%;
   margin-top: 10px;
-  margin-left: -1px;
 }
 .btnContainer {
   background-color: var(--buttonBackgroundColor);
@@ -286,59 +97,59 @@ header {
 .line {
   border: 0;
   height: 1px;
-  background: var(--lineColor); 
-  margin-top: 64px; 
+  background: var(--lineColor);
+  margin-top: 64px;
   margin-bottom: 64px;
-  width: 1157px; 
+  width: 1157px;
 }
-.container{
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-width: 1157px;
-align-self: stretch;
-margin: 0 auto;
-gap: 156px;
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1157px;
+  align-self: stretch;
+  margin: 0 auto;
+  gap: 156px;
 }
 .exp-title {
-font-size: 48px;
-font-weight: 200;
-line-height: 84px;
-color: var(--titleColor);
-font-family: var(--font-family-title);
+  font-size: 48px;
+  font-weight: 200;
+  line-height: 84px;
+  color: var(--titleColor);
+  font-family: var(--font-family-title);
 }
 .exp-position {
-display: flex;  
-justify-content: center;
-flex-direction: column;
-align-self: stretch;
-font-size: 24px;
-line-height: 52px; 
-color: var(--titleColor);
-font-family: var(--font-family-body);
-height: 37px;
-margin-bottom: 0;
-font-weight: 900;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-self: stretch;
+  font-size: 24px;
+  line-height: 52px;
+  color: var(--titleColor);
+  font-family: var(--font-family-body);
+  height: 37px;
+  margin-bottom: 0;
+  font-weight: 900;
 }
 .exp-subtitle {
-display: flex;
-flex-direction: row;
-gap: 8px ;
-margin-top: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-top: 0;
 }
 .exp-org-name {
-font-size: 18px;
-line-height: 28px;
-/* font-weight: 700; */
-color: var(--textColor);
-font-family: var(--font-family-body);
+  font-size: 18px;
+  line-height: 28px;
+  /* font-weight: 700; */
+  color: var(--textColor);
+  font-family: var(--font-family-body);
 }
 .exp-timeline {
-line-height: 28px;  
-font-size: 18px;
-/* font-weight: 600; */
-color: var(--textColor);
-font-family: var(--font-family-body);
+  line-height: 28px;
+  font-size: 18px;
+  /* font-weight: 600; */
+  color: var(--textColor);
+  font-family: var(--font-family-body);
 }
 .exp-description {
   line-height: 28px;
@@ -349,88 +160,44 @@ font-family: var(--font-family-body);
   align-self: stretch;
   margin-top: 36px;
 }
-.exp-container-middle{
+.exp-container-middle {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-top: 35px;
 }
-.circle{
+.circle {
   width: 27px;
   height: 27px;
   background-color: var(--lineColor);
   border-radius: 50%;
 }
-.border{
+.border {
   width: 3px;
   height: 300px;
   background-color: var(--lineColor);
 }
-.circle-3{
+.circle-3 {
   width: 27px;
   height: 27px;
   background-color: var(--lineColor);
   border-radius: 50%;
 }
-.border-3{
+.border-3 {
   width: 3px;
   height: 270px;
   background-color: var(--lineColor);
 }
-.circle-4{
+.circle-4 {
   width: 27px;
   height: 27px;
   background-color: var(--lineColor);
   border-radius: 50%;
 }
-.border-4{
+.border-4 {
   width: 3px;
   height: 270px;
   background-color: var(--lineColor);
 }
-/* -👇👇👇-Footer-👇👇👇-Start-👇👇👇- */
-.icons{
-  width: 35px;
-  height: 35px;
-  transition: 1s;
-transition-timing-function: ease-in-out;
-}
-.icons:hover {
-  width: 50px;
-  height: 50px;
-  background-color: var(--footerIconsBackgroundHoverCover);
-  border-radius: 10px;
-  padding: 3px;
-  border: 2px solid var(--footerIconsBorderColor);
-}
-.footer {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-margin: 32px; 
-}
-.footer-txt{
-color: var(--footertitleColor);
-font-size: 25px;
-opacity: 0.75;
-font-family: var(--font-family-title);
-transition: 1s;
-transition-timing-function: ease-in-out;
-}
-.footer-txt:hover {
-  cursor: pointer;
-  font-size: 35px;
-  border: 3px dashed var(--footerTextBorderHovercolor);
-  border-radius: 10px;
-  padding: 5px 10px;
-  background-color: var(--footerTextBackgroundHoverColor);
-  color: var(--footertitleHoverColor-light)
-}
-.footer-icons {
-display: flex;
-flex-direction: row;
-align-items: center;
-gap: 20px;
-}/* -☝☝☝-Footer-☝☝☝-end-☝☝☝- */
+
