--- a/portfolio.css
+++ b/portfolio.css
@@ -1,236 +1,69 @@
-@font-face {
-  font-family: Rubik-Dirt;
-  src: url(./Fonts/Rubik-Dirt.ttf);
+.line-portfolio {
+  border: 0;
+  background: var(--lineColor);
+  width: 1157px;
+  height: 1px;
+  margin-left: 90px;
 }
-@font-face {
-  font-family: Poppins;
-  src: url(/Fonts/Poppins-Regular.ttf);
-}
-:root {
-  /* -👇👇👇_LIGHT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
-  --bodyColor-light: #f0f0f0;
-  --titleColor-light:#1f1f1f;
-  --subtitleColor-light: #4b4b4b;
-  --textColor-light: #1f1f1f;
-  --lineColor-light: #007BFF;
-  --borderColor-light: #007BFF;
-  --buttonBackgroundColor-light:#007BFF;
-  --buttonBackgroundHover-light:  #f0f0f0;
-  --buttonTextColor-light: #f0f0f0;
-  --buttonTextHover-light: #1f1f1f;
-  --footerIconsBackgroundHoverCover-light: #007BFF;
-  --footerIconsBorderColor-light: #1f1f1f;
-  --footerTextbackgroundHoverColor-light: #007BFF;
-  --footerTextBorderHovercolor-light: #1f1f1f;
-  --footertitleColor-light: #1f1f1f;
-  --footertitleHoverColor-light: #fffcfc;
-  --headerNavLinkACTIVEBorderColor-light: #007BFF;
-  --headerNavLinkACTIVEColor-light: #1f1f1f;
-  --headerNavLinkNONACTIVEColor-light: #1f1f1f;
-  --textModeColor-light: #1f1f1f;
-     /* -👇👇👇_DEFAULT_MODE_👇👇👇_Color_Scheme_👇👇👇- */
-  --bodyColor: var(--bodyColor-light);
-  --titleColor: var(--titleColor-light);
-  --subtitleColor: var(--subtitleColor-light);
-  --textColor: var(--textColor-light);
-  --lineColor: var(--lineColor-light);
-  --borderColor: var(--border-color-light);
-  --buttonBackgroundColor: var(--buttonBackgroundColor-light);
-  --buttonBackgroundHover: var( --buttonBackgroundHover-light);
-  --buttonTextColor: var(--buttonTextColor-light);
-  --buttonTextHover: var(--buttonTextHover-light);
-  --footerIconsBackgroundHoverCover: var(--footerIconsBackgroundHoverCover-light);
-  --footerIconsBorderColor: var(--footerIconsBorderColor-light);
-  --footerTextBackgroundHoverColor: var(--footerTextbackgroundHoverColor-light);
-  --footerTextBorderHovercolor: var(--footerTextBorderHovercolor-light);
-  --footertitleColor: var( --footertitleColor-light);
-  --footertitleHoverColor: var(--footertitleHoverColor-light);
-  --headerNavLinkACTIVEBorderColor: var(--headerNavLinkACTIVEBorderColor-light);
-  --headerNavLinkACTIVEColor: var(--headerNavLinkACTIVEColor-light);
-  --headerNavLinkColor: var(--headerNavLinkColor-light);
-  --headerNavLinkNONACTIVEColor: var(--headerNavLinkNONACTIVEColor-light);
-  --textModeColor: var(--textModeColor-light);
-  
-  /* -👇👇👇_COOL_MODE_👇👇👇_Background_Color_Scheme_👇👇👇- */
-  --bodyColor-dark: #360130;
-  --titleColor-dark:#ffaa00;
-  --subtitleColor-dark: #0c71b4;
-  --textColor-dark: #f0f0f0;
-  --lineColor-dark: #a800a8;
-  --borderColor-dark: #ff00ff;
-  --buttonBackgroundColor-dark:#132531;
-  --buttonBackgroundHover-dark:  #7A297A;;
-  --buttonTextColor-dark: #f0f0f0;
-  --buttonTextHover-dark: #1f1f1f;
-  --footerIconsBackgroundHoverCover-dark: none;
-  --footerIconsBorderColor-dark: none;
-  --footerTextbackgroundHoverColor-dark: #ffd500;
-  --footerTextBorderHovercolor-dark: #007BFF;
-  --footertitleColor-dark: #fffcfc;
-  --footertitleHoverColor-dark: #1f1f1f;
-  --headerNavLinkACTIVEBorderColor-dark: #007BFF;
-  --headerNavLinkACTIVEColor-dark: #ff9500;
-  --headerNavLinkNONACTIVEColor-dark: #f0f0f0;
-  --textModeColor-dark: #ffd500;
 
-  --font-family-title: 'Rubik-Dirt', sans-serif;
-  --font-family-body: 'Poppins', sans-serif;
-  
-  --navActiceTabBackground: var(--navActiceTabBackground-light);
-  --navActiceTabBackground-light: none;
-  --navActiceTabBackground-dark: url("./icons/active-nav-bg-cool-mode.gif");
-
-  --headerModeFlexDIrection: var(--headerModeFlexDIrection-light);
-  --headerModeFlexDIrection-light: flex;
-  --headerModeFlexDIrection-dark: row-reverse;
-  --bodyBackgroundImage-light: none;
-  --bodyBackgroundImage: var(--bodyBackgroundImage-light);
-  --bodyBackgroundImage-dark: url("./images/Backgrounds/body-5.gif");
-}
-body {
-  background-image: var(--bodyBackgroundImage);
-
-background-color: var(--bodyColor);
-margin: 0;
-}
-/* -👇👇👇-header-👇👇👇-Start-👇👇👇- */
-.left-logo-mode{/* -👇👇👇-Mode-👇👇👇-Start-👇👇👇- */
+.line-container {
+  padding: 10px;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  gap: 20px;
+  justify-content: center;
+  height: fit-content;
+  margin-top: 64px;
+  margin-bottom: 32px;
 }
- .light-mode-text{
-  color: var(--textModeColor) !important;
-  align-self: center;
-  text-align: center;
-  font-size: 18px;
-  font-family: var(--font-family-title);
-  color: var(--title-light);
-  width: 60px;
- }
-.mode-with-logo{
-  display: flex;
-  flex-direction: var(--headerModeFlexDIrection);
-  justify-content: space-between;
-  align-items: center;
-  align-self: center;
-  border: 1px solid var(--border-color);
-  border-radius: 50px;
-  background-color: var(--btn-background-light);
-  gap: 5px;
-  padding-right: 10px;
-  padding-left: 3px;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  width: 110px;
-  height: 48px;
-  position: relative;
-}
-.mode {
-  position: relative;
-  width: 45px;
-  height: 45px;
-  padding: 2px;
-  margin-top: 2.5px;
-}
-.mode input[type="checkbox"] {
-  display: none;
-}
-.mode label{
-  background-image: url("./icons/cool-mode-icon.gif");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50px;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  display: inline-block;
-}
-.mode input[type="checkbox"]:checked + label {
-  /* background-color: var();-----------------☝☝☝-Mode-👇👇👇--- */
-  position: absolute;
-  bottom: 0px;
-  left: 5px;
-  right: 0px;
-  top: 2.5px;
-  background-image: url("./icons/light-mode-icon");  /* need to be changed -----Canva--RunwayML*/
-}
-/* -☝☝☝-Mode-☝☝☝-end-☝☝☝- */
-/* ---👇👇👇-header-👇👇👇-Start-👇👇👇--- */
-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 32px 142px;
-  }
-  .active {
-    color: var(--headerNavLinkACTIVEColor);
-    border: 1px solid var(--headerNavLinkACTIVEBorderColor);
-    text-decoration: none;
-    font-family: var(--font-family-title);
-    padding: 5px 10px;
-    border-radius: 10px 10px 10px 10px;
-    background-image: var(--navActiceTabBackground);
-    /* background-image: url("./active-nav-bg-cool-mode.gif"); */
-    border-left: 0.35px;
-    border-right: 0.35px
-  }
-  header ul {
-    font-family: "Poppins";
-    list-style: none;
-    display: flex;
-    gap: 10px;
-    font-size: 18px;
-    font-family: var(--font-family-body);
-}
-.non-active{
-  color: var(--headerNavLinkNONACTIVEColor);
-    text-decoration-line: none;
+/* -👇👇👇-Main Content-👇👇👇-Start-👇👇👇- */
 
-  }/* -☝☝☝-Header-☝☝☝-end-☝☝☝- */
-.line {
-  border: 0;
-  height: 1px;
-  width: 1157px; 
-  background: var(--btn-color); 
-margin-top: 100px;    
-margin-left: 142px;
-margin-right: 142px;
-
-}
-/* ---------------Main COntent------------------------------- */
-
-.main-content {
+.main-content-parent {
   display: flex;
   flex-direction: column;
-  align-self: stretch;
+  justify-content: center;
+  align-self: center;
   align-content: center;
   align-items: center;
   margin-left: 142px;
   margin-right: 142px;
-  }
-.content-title{
+  margin-top: 100px;
+  margin-bottom: 100px;
+  /* width: fit-content; */
+}
+
+.main-content-portfolio {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  align-content: center;
+  align-items: center;
+  margin-left: 142px;
+  margin-right: 142px;
+  width: 1157px;
+}
+.content-title {
   font-size: 68px;
   font-weight: 200;
   color: var(--titleColor);
   font-family: var(--font-family-title);
   text-align: center;
 }
-
-/* ---------------The Grid------------------------------- */
+/* -👇👇👇-The Grid-👇👇👇-Start-👇👇👇- */
 .works-wrapper {
   display: grid;
+  place-self: center;
+  align-self: center;
+  align-items: center;
+  grid-auto-flow: i;
   width: 1157px;
   height: 456px;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 216px;
   row-gap: 50px;
   column-gap: 40px;
-  }
-.box-1{
+}
+.box-1 {
   width: 384px;
   height: 216px;
   border: 4px solid var(--lineColor);
@@ -239,8 +72,8 @@ margin-right: 142px;
   position: relative;
   display: inline-block;
   cursor: pointer;
-  }
-.box-1:hover{
+}
+.box-1:hover {
   background-image: url("./images/hover-img.gif");
 }
 .hover-links {
@@ -259,7 +92,7 @@ margin-right: 142px;
   width: 380px;
   height: 65px;
 }
-.box-2{
+.box-2 {
   width: 384px;
   height: 216px;
   border: 4px solid var(--lineColor);
@@ -268,8 +101,8 @@ margin-right: 142px;
   position: relative;
   display: inline-block;
   cursor: pointer;
-  }
-.box-2:hover{
+}
+.box-2:hover {
   background-image: url("./images/hover-img.gif");
 }
 .box-2:hover .hover-links {
@@ -279,7 +112,7 @@ margin-right: 142px;
   width: 380px;
   height: 65px;
 }
-.box-3{
+.box-3 {
   width: 384px;
   height: 216px;
   border: 4px solid var(--lineColor);
@@ -288,8 +121,8 @@ margin-right: 142px;
   position: relative;
   display: inline-block;
   cursor: pointer;
-  }
-.box-3:hover{
+}
+.box-3:hover {
   background-image: url("./images/hover-img.gif");
 }
 .box-3:hover .hover-links {
@@ -299,17 +132,17 @@ margin-right: 142px;
   width: 380px;
   height: 65px;
 }
-.box-4{
+.box-4 {
   width: 384px;
   height: 216px;
-  border: 4px solid var(--lineColor);;
+  border: 4px solid var(--lineColor);
   border-radius: 15px;
   background-image: url("./images/D.png");
   position: relative;
   display: inline-block;
   cursor: pointer;
-  }
-.box-4:hover{
+}
+.box-4:hover {
   background-image: url("./images/hover-img.gif");
 }
 .box-4:hover .hover-links {
@@ -319,7 +152,7 @@ margin-right: 142px;
   width: 380px;
   height: 65px;
 }
-.box-5{
+.box-5 {
   width: 384px;
   height: 216px;
   border: 4px solid var(--lineColor);
@@ -328,8 +161,8 @@ margin-right: 142px;
   position: relative;
   display: inline-block;
   cursor: pointer;
-  }
-.box-5:hover{
+}
+.box-5:hover {
   background-image: url("./images/hover-img.gif");
 }
 .box-5:hover .hover-links {
@@ -339,17 +172,17 @@ margin-right: 142px;
   width: 380px;
   height: 65px;
 }
-.box-6{
+.box-6 {
   width: 384px;
   height: 216px;
-  border: 4px solid var(--lineColor);;
+  border: 4px solid var(--lineColor);
   border-radius: 15px;
   background-image: url("./images/F.png");
   position: relative;
   display: inline-block;
   cursor: pointer;
-  }
-.box-6:hover{
+}
+.box-6:hover {
   background-image: url("./images/hover-img.gif");
 }
 .box-6:hover .hover-links {
@@ -367,50 +200,4 @@ margin-right: 142px;
 .hover-links li:last-child {
   border-bottom: none;
 }
-/* -👇👇👇-Footer-👇👇👇-Start-👇👇👇- */
-.icons{
-  width: 35px;
-  height: 35px;
-  transition: 1s;
-transition-timing-function: ease-in-out;
-}
-.icons:hover {
-  width: 50px;
-  height: 50px;
-  background-color: var(--footerIconsBackgroundHoverCover);
-  border-radius: 10px;
-  padding: 3px;
-  border: 2px solid var(--footerIconsBorderColor);
-}
-.footer {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-margin: 32px; 
-}
-.footer-txt{
-color: var(--footertitleColor);
-font-size: 25px;
-opacity: 0.75;
-font-family: var(--font-family-title);
-transition: 1s;
-transition-timing-function: ease-in-out;
-}
-.footer-txt:hover {
-  cursor: pointer;
-  font-size: 35px;
-  border: 3px dashed var(--footerTextBorderHovercolor);
-  border-radius: 10px;
-  padding: 5px 10px;
-  background-color: var(--footerTextBackgroundHoverColor);
-  color: var(--footertitleHoverColor-light)
-}
-.footer-icons {
-display: flex;
-flex-direction: row;
-align-items: center;
-gap: 20px;
-}/* -☝☝☝-Footer-☝☝☝-end-☝☝☝- */
-
 
